--- a/frontend/src/components/SingleProduct/SingleProduct.css
+++ b/frontend/src/components/SingleProduct/SingleProduct.css
@@ -7,10 +7,26 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     text-align: center;
+    overflow: hidden;
 }
 
-.product-info {
 
+
+.product-info {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.product-info img {
+    width: 100%;
+    height: 170px;
+    object-fit: cover;
+}
+
+.product-img-div {
+    border: #ddb347 3px solid;
 }
 
 .product-price {
@@ -33,4 +49,33 @@
     max-height: 200px;
     object-fit: contain;
     margin-bottom: 1rem;
+}
+
+.product-complete-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 100%;
+    align-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.product-name-description {
+    margin-top: 10px;
+}
+
+.product-price-category {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.product-info-button {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 165px;
+    height: 65px;
 }
