--- a/frontend/src/components/AppFooter/AppFooter.css
+++ b/frontend/src/components/AppFooter/AppFooter.css
@@ -10,8 +10,8 @@ footer {
 
 .footerContainer {
     width: 100%;
-    padding: 15px 30px 20px;
-    margin-top: 45px;
+    padding: 10px 30px 20px;
+    margin-top: 15px;
 }
 
 .socialIcons {
@@ -88,4 +88,9 @@ footer {
 .footerBottom p {
     font-family: 'Young Serif', serif;
     font-size: 0.9em;
+}
+
+footer {
+    flex-shrink: 0;
+    background-color: #2a3135;
 }
