--- a/frontend/src/pages/Products/Products.css
+++ b/frontend/src/pages/Products/Products.css
@@ -17,6 +17,15 @@
     padding: 1rem;
 }
 
+.fetching-status {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
 /*.all-products {*/
 /*    display: flex;*/
 /*    flex-wrap: wrap;*/
