--- a/frontend/src/components/ModalProductCondition/ModalProductCondition.css
+++ b/frontend/src/components/ModalProductCondition/ModalProductCondition.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.4); /* Semi-transparent black */
+    background-color: rgba(0, 0, 0, 0.4); /* Semi-transparent black */
     display: flex;
     justify-content: center;
     align-items: center;
