Edited Login Form

--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -97,3 +97,16 @@
     font-size: 16pt;
     border-radius: 5px;
 }
+
+.login-error-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    padding-right: 25px;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
